# Pattern-recognition

./: .gitignore  LICENSE  README.md
.github/workflows/: dal_test.yml  e2e_test.yml
Exercise1/: exercise1.py  thresholding.py
Exercise1/Asyncio/: exercise1a_asyncio.py  exercise1b_asyncio.py  exercise1c_asyncio.py  features_asyncio.py  thresholding_asyncio.py
Exercise1/Basic/: LongestShape.txt  exercise1a.py  exercise1b.py  exercise1c.py  features.py  shapes.py  thresholding.py
Exercise1/Multiprocessing/: LongestShape-gear1-equalizeHist.txt  LongestShape-gear1-gaussianBlur.txt  LongestShape-gear1-medianBlur.txt  LongestShape-gear2-equalizeHist.txt  LongestShape-gear2-gaussianBlur.txt  LongestShape-gear2-medianBlur.txt  LongestShape-gear2-original.txt  exercise1a_multiprocessing.py  exercise1b_multiprocessing.py  exercise1c_multiprocessing.py  (+3 more)
Project/: .env  README.md  docker-compose.yml
Project/backend/: Dockerfile  api.py  db_model.py  docker-compose.yaml  pyproject.toml  recognition_api.py
Project/backend/api/: Dockerfile  README.md  pyproject.toml
Project/backend/api/recognition_api/: __init__.py  typical test cases.txt
Project/backend/api/recognition_api/dal/: __init__.py  dal.py
Project/backend/api/recognition_api/model/: __init__.py
Project/backend/api/tests/: __init__.py  test_dal.py
Project/backend/dal/: dal.py  test_dal.py
Project/frontend/web/: Dockerfile  README.md  dashboard.html  pyproject.toml
Project/frontend/web/recognition_web/: __init__.py  webserver.py
Project/frontend/web/recognition_web/web/: dashboard.html
(+37 files in other folders)
