[tool.poetry]
name = "recognition_web"
version = "1.0"
description = "WEB for feature recognition"
authors = ["Timotej979"]
readme = "README.md"
packages = [{ include = "recognition_web"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

asyncio = "^3.4.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"